--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -69,7 +69,7 @@
       "source": [
         "## Generator\n",
         "___\n",
-        "Generator will gernerate $(x_i, y_i)$ samples based on single weight and bias,</br>\n",
+        "Generator gernerate $(x_i, y_i)$ samples based on single weight and bias,</br>\n",
         "where: </br>\n",
         "<center>\n",
         "$\\mathbf{w} \\sim \\mathcal{U}[-R,R]^d$</br>\n",
